--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,13 +1,45 @@
 components:
 - components: []
+  layout_properties: {slot: nav-right}
+  name: navbar_links
+  properties: {}
+  type: FlowPanel
+- layout_properties: {slot: left-nav}
+  name: column_panel_1
+  properties: {}
+  type: ColumnPanel
+- components:
+  - components:
+    - layout_properties: {col_xs: 0, row: FWQFCC, width_xs: 4}
+      name: label_1
+      properties: {text: gsdgsdgsd}
+      type: Label
+    - layout_properties: {col_xs: 4, row: FWQFCC, width_xs: 4}
+      name: button_1
+      properties: {text: button_1}
+      type: Button
+    - layout_properties: {col_xs: 0, row: OHRAVC, width_xs: 4}
+      name: yfdhg
+      properties: {text: gdsgdsgdsgds}
+      type: Label
+    - data_bindings: []
+      event_bindings: {click: button_2_click}
+      layout_properties: {col_xs: 4, row: OHRAVC, width_xs: 4}
+      name: button_2
+      properties: {icon: 'fa:address-card', text: button_2}
+      type: Button
+    layout_properties: {grid_position: 'IDKYGX,BWFFFX'}
+    name: grid_panel_1
+    properties: {}
+    type: GridPanel
+  - layout_properties: {grid_position: 'YYEIVW,AZFCCQ'}
+    name: grid_panel_2
+    properties: {}
+    type: GridPanel
   layout_properties: {slot: default}
   name: content_panel
   properties: {col_widths: '{}'}
   type: ColumnPanel
-- layout_properties: {slot: nav-right}
-  name: navbar_links
-  properties: {}
-  type: FlowPanel
 container:
   properties: {html: '@theme:standard-page.html'}
   type: HtmlTemplate
