--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -9,36 +9,49 @@ components:
   properties: {}
   type: ColumnPanel
 - components:
+  - components: []
+    layout_properties: {grid_position: 'YSUMDD,BRHZPM JEUFOC,EEYZJK'}
+    name: column_panel_3
+    properties: {role: elevated-card}
+    type: ColumnPanel
   - components:
-    - layout_properties: {col_xs: 0, row: FWQFCC, width_xs: 4}
-      name: label_1
-      properties: {text: gsdgsdgsd}
-      type: Label
-    - layout_properties: {col_xs: 4, row: FWQFCC, width_xs: 4}
+    - layout_properties: {grid_position: 'QSNYGY,OCOBWE'}
+      name: button_4
+      properties: {text: button_4}
+      type: Button
+    - layout_properties: {grid_position: 'IDQHGX,JUNZAF'}
+      name: button_5
+      properties: {text: button_5}
+      type: Button
+    layout_properties: {grid_position: 'YSUMDD,BRHZPM BVWTCZ,CBNBCH'}
+    name: outlined_card_1
+    properties: {role: outlined-card}
+    type: ColumnPanel
+  - components:
+    - event_bindings: {click: button_1_click}
+      layout_properties: {grid_position: 'SWUJDQ,JGRPPB'}
       name: button_1
-      properties: {text: button_1}
+      properties: {role: filled-button, text: button_1}
       type: Button
-    - layout_properties: {col_xs: 0, row: OHRAVC, width_xs: 4}
-      name: yfdhg
-      properties: {text: gdsgdsgdsgds}
-      type: Label
-    - data_bindings: []
-      event_bindings: {click: button_2_click}
-      layout_properties: {col_xs: 4, row: OHRAVC, width_xs: 4}
+    - layout_properties: {grid_position: 'SMRCAV,ZIBDAD'}
       name: button_2
-      properties: {icon: 'fa:address-card', text: button_2}
+      properties: {role: filled-button, text: button_2}
       type: Button
-    layout_properties: {grid_position: 'IDKYGX,BWFFFX'}
-    name: grid_panel_1
-    properties: {}
-    type: GridPanel
-  - layout_properties: {grid_position: 'YYEIVW,AZFCCQ'}
-    name: grid_panel_2
-    properties: {}
-    type: GridPanel
+    - layout_properties: {grid_position: 'EYAULG,TRBGKK'}
+      name: button_3
+      properties: {role: filled-button, text: button_3}
+      type: Button
+    layout_properties: {full_width_row: false, grid_position: 'YSUMDD,MCWVOI', row_background: 'theme:Primary'}
+    name: column_panel_5
+    properties:
+      role: outlined-card
+      spacing:
+        margin: [null, null, null, '0']
+        padding: [null, null, null, '15']
+    type: ColumnPanel
   layout_properties: {slot: default}
-  name: content_panel
-  properties: {col_widths: '{}'}
+  name: column_panel_2
+  properties: {wrap_on: never}
   type: ColumnPanel
 container:
   properties: {html: '@theme:standard-page.html'}
