--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -23,6 +23,11 @@ components:
       name: button_5
       properties: {text: button_5}
       type: Button
+    - event_bindings: {click: button_3_click}
+      layout_properties: {grid_position: 'ATHRQQ,IFTGYZ'}
+      name: button_3
+      properties: {role: filled-button, text: button_3}
+      type: Button
     layout_properties: {grid_position: 'YSUMDD,BRHZPM BVWTCZ,CBNBCH'}
     name: outlined_card_1
     properties: {role: outlined-card}
@@ -36,10 +41,6 @@ components:
     - layout_properties: {grid_position: 'SMRCAV,ZIBDAD'}
       name: button_2
       properties: {role: filled-button, text: button_2}
-      type: Button
-    - layout_properties: {grid_position: 'EYAULG,TRBGKK'}
-      name: button_3
-      properties: {role: filled-button, text: button_3}
       type: Button
     layout_properties: {full_width_row: false, grid_position: 'YSUMDD,MCWVOI', row_background: 'theme:Primary'}
     name: column_panel_5
