--- a/anvil.yaml
+++ b/anvil.yaml
@@ -5,7 +5,7 @@ package_name: M3_App_1
 renamed: true
 runtime_options:
   client_version: '3'
-  server_spec: {base: python310-minimal}
+  server_spec: {base: python310-standard}
   server_version: python3-sandbox
   version: 2
 services:
