--- a/client_code/Form1/ItemTemplate/form_template.yaml
+++ b/client_code/Form1/ItemTemplate/form_template.yaml
@@ -1,4 +1,8 @@
 components:
+- layout_properties: {grid_position: 'TONEPM,RNTSNO'}
+  name: image
+  properties: {height: 109}
+  type: Image
 - layout_properties: {grid_position: 'TONEPM,GBISKZ'}
   name: label_name
   properties: {}
@@ -7,5 +11,7 @@ components:
   name: label_price
   properties: {}
   type: Label
-container: {type: ColumnPanel}
+container:
+  properties: {col_widths: '{"GBISKZ":15,"BUFIRH":25}'}
+  type: ColumnPanel
 is_package: true
