Created Form1.ItemTemplate1; Edited Form1.ItemTemplate, Form1.RowTemplate1, Form1 and Form1.ItemTemplate2; Deleted Form1.ItemTemplate3

--- a/client_code/Form1/ItemTemplate/form_template.yaml
+++ b/client_code/Form1/ItemTemplate/form_template.yaml
@@ -3,15 +3,39 @@ components:
   name: image
   properties: {height: 109}
   type: Image
+- layout_properties: {grid_position: 'TONEPM,KULGZD'}
+  name: label_1
+  properties:
+    align: right
+    spacing:
+      margin: [null, null, 0, null]
+      padding: [null, null, 0, null]
+    text: 'Name:'
+  type: Label
+- layout_properties: {grid_position: 'TONEPM,KULGZD DYUBER,OXMQPT'}
+  name: label_2
+  properties:
+    align: right
+    spacing:
+      margin: [0, null, 0, null]
+      padding: [0, null, 0, null]
+    text: 'Description:'
+  type: Label
 - layout_properties: {grid_position: 'TONEPM,GBISKZ'}
   name: label_name
-  properties: {}
+  properties:
+    spacing:
+      margin: [null, null, 0, null]
+      padding: [null, null, 0, null]
   type: Label
-- layout_properties: {grid_position: 'TONEPM,BUFIRH'}
+- layout_properties: {grid_position: 'TONEPM,GBISKZ QWKLBW,APVRJR'}
   name: label_price
-  properties: {}
+  properties:
+    spacing:
+      margin: [0, null, 0, null]
+      padding: [0, null, 0, null]
   type: Label
 container:
-  properties: {col_widths: '{"GBISKZ":15,"BUFIRH":25}'}
+  properties: {col_widths: '{"GBISKZ":25,"RNTSNO":22,"KULGZD":13}'}
   type: ColumnPanel
 is_package: true
