--- a/client_code/Form1/ItemTemplate2/form_template.yaml
+++ b/client_code/Form1/ItemTemplate2/form_template.yaml
@@ -1,3 +1,7 @@
-components: []
+components:
+- layout_properties: {grid_position: 'TMPCCJ,EOXUIG'}
+  name: outlined_button_1
+  properties: {role: outlined-button, text: outlined_button_1}
+  type: Button
 container: {type: ColumnPanel}
 is_package: true
