--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -1,3 +1,11 @@
-components: []
+components:
+- layout_properties: {}
+  name: outlined_button_1
+  properties: {role: outlined-button, text: outlined_button_1}
+  type: Button
+- layout_properties: {column: 'null'}
+  name: outlined_button_2
+  properties: {role: outlined-button, text: outlined_button_2}
+  type: Button
 container: {type: DataRowPanel}
 is_package: true
