--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -14,6 +14,10 @@ components:
     name: column_panel_3
     properties: {role: elevated-card}
     type: ColumnPanel
+  - layout_properties: {grid_position: 'YSUMDD,BRHZPM XKPRIO,LJIOXU'}
+    name: outlined_card_2
+    properties: {role: outlined-card}
+    type: ColumnPanel
   - components:
     - layout_properties: {grid_position: 'QSNYGY,OCOBWE'}
       name: button_4
@@ -32,6 +36,10 @@ components:
     name: outlined_card_1
     properties: {role: outlined-card}
     type: ColumnPanel
+  - layout_properties: {grid_position: 'YSUMDD,BRHZPM NAQSIR,UNDBVW'}
+    name: repeating_panel_2
+    properties: {item_template: Form1.ItemTemplate2}
+    type: RepeatingPanel
   - components:
     - event_bindings: {click: button_1_click}
       layout_properties: {grid_position: 'SWUJDQ,JGRPPB'}
@@ -50,7 +58,7 @@ components:
         margin: [null, null, null, '0']
         padding: [null, null, null, '15']
     type: ColumnPanel
-  - layout_properties: {grid_position: 'YSUMDD,MCWVOI IRFBVE,YJPWYJ'}
+  - layout_properties: {grid_position: 'VFHYSQ,WMQISD YSUMDD,MCWVOI IRFBVE,YJPWYJ'}
     name: repeating_panel_1
     properties: {item_template: Form1.ItemTemplate}
     type: RepeatingPanel
