--- a/client_code/Form1/ItemTemplate1/form_template.yaml
+++ b/client_code/Form1/ItemTemplate1/form_template.yaml
@@ -1,7 +1,3 @@
-components:
-- layout_properties: {grid_position: 'FHYUST,LJLNXL'}
-  name: flow_panel_1
-  properties: {}
-  type: FlowPanel
+components: []
 container: {type: ColumnPanel}
 is_package: true
