--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,8 +5,7 @@ unique_ids:
   forms:
     Form1: SV5S2J6JZSFTS4CJ3ELMLHVB7BSNIP4Q
     Form1.ItemTemplate: '1750879281477262655119809.79285'
-    Form1.ItemTemplate1: '1750964202628325024166044.3858'
-    Form1.ItemTemplate2: '1750885989671616588455294.7736'
+    Form1.ItemTemplate_copy: '1750968326938625488171008.2505'
     Form1.RowTemplate1: '1750879024355934284897012.7294'
     Form1.RowTemplate2: '1750879272800440440946277.79364'
   modules: {}
