--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -63,6 +63,15 @@ components:
       name: button_6
       properties: {text: button_6}
       type: Button
+    - components:
+      - layout_properties: {grid_position: 'OQRHCC,RRTUXR'}
+        name: item_template
+        properties: {}
+        type: form:Form1.ItemTemplate
+      layout_properties: {grid_position: 'UUGYNN,TRDCVQ'}
+      name: column_test
+      properties: {}
+      type: ColumnPanel
     - layout_properties: {grid_position: 'UUGYNN,HQPHLW'}
       name: outlined_button_1
       properties: {role: outlined-button, text: outlined_button_1}
