--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -54,32 +54,32 @@ components:
         margin: [null, null, null, '0']
         padding: [null, null, null, '15']
     type: ColumnPanel
+  - layout_properties: {grid_position: 'YSUMDD,MCWVOI IRFBVE,OZKSQH'}
+    name: label_2
+    properties: {}
+    type: Label
+  - layout_properties: {grid_position: 'YSUMDD,MCWVOI IRFBVE,ZLCBBA'}
+    name: label_1
+    properties: {}
+    type: Label
   - layout_properties: {grid_position: 'VFHYSQ,WMQISD YSUMDD,MCWVOI IRFBVE,YJPWYJ'}
     name: repeating_panel_1
     properties: {item_template: Form1.ItemTemplate}
     type: RepeatingPanel
   - components:
-    - layout_properties: {grid_position: 'UUGYNN,DKQJAS'}
-      name: button_6
-      properties: {text: button_6}
-      type: Button
     - components:
-      - layout_properties: {grid_position: 'OQRHCC,RRTUXR'}
-        name: item_template
-        properties: {}
-        type: form:Form1.ItemTemplate
-      layout_properties: {grid_position: 'UUGYNN,TRDCVQ'}
+      - layout_properties: {grid_position: 'WTIOPI,IKOZSU'}
+        name: label_4
+        properties: {text: fasgghgjjgjgjg}
+        type: Label
+      layout_properties: {grid_position: 'EYSLFR,PXBXMU'}
       name: column_test
       properties: {}
       type: ColumnPanel
-    - layout_properties: {grid_position: 'UUGYNN,HQPHLW'}
-      name: outlined_button_1
-      properties: {role: outlined-button, text: outlined_button_1}
-      type: Button
-    - layout_properties: {grid_position: 'UUGYNN,ARMUPM'}
-      name: button_7
-      properties: {text: button_7}
-      type: Button
+    - layout_properties: {grid_position: 'EYSLFR,HGGTOZ'}
+      name: label_3
+      properties: {text: fsafsafsfas}
+      type: Label
     layout_properties: {grid_position: 'EFPWUA,IQMPKH'}
     name: column_panel_4
     properties: {}
