--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -8,6 +8,7 @@ unique_ids:
     Form1.ItemTemplate_copy: '1750968326938625488171008.2505'
     Form1.RowTemplate1: '1750879024355934284897012.7294'
     Form1.RowTemplate2: '1750879272800440440946277.79364'
+    Form2: '1751219333231322219180333.1697'
   modules: {}
   scripts: {}
   server_modules: {}
